<resources>
    <string name="app_name">UnicornAndroidTemplate</string>
    <string name="hello_login">Hello world!Please log-in</string>
    <string name="action_settings">Settings</string>
    <string name="async_button">Do Async toasting</string>
    <string name="reactor">reactor</string>
    <string name="btn_login_txt">Login</string>
    <string name="input_password_hint">Password</string>
    <string name="input_email_hint">Email</string>
    <string name="link_signup_text">No account yet? Create one</string>
    <string name="unicorn_logo_desc">unicorn_logo</string>
</resources>
