<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:fitsSystemWindows="true"
            android:fillViewport="true"
            android:theme="@style/AppTheme">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="56dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:background="@color/unicorn_background"
            android:baselineAligned="false"
            >

        <ImageView
                android:src="@drawable/ic_launcher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/unicorn_logo_desc"/>

        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textColorHint="#ffffff"
                app:hintTextAppearance="@style/AppTheme.HintAppearance">

            <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/input_email_hint"
                    android:textColor="#ffffff"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textColorHint="#ffffff"
                app:hintTextAppearance="@style/AppTheme.HintAppearance"
                >

            <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/input_password_hint"
                    android:textColor="#ffffff"
                    android:textIsSelectable="false"
                    />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:text="@string/btn_login_txt"
                android:background="@color/bright_foreground_inverse_material_light"
                android:textColor="@color/unicorn_background"/>

        <TextView
                android:id="@+id/link_signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/link_signup_text"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="#ffffff"/>

    </LinearLayout>
</ScrollView>